# fizzy

./: .autoenv.zsh  .autoenv_leave.zsh  .byebug_history  .exrc  .gitignore  .rubocop.yml  .rufo  .travis.yml  .yardopts  BIGNAMI-EN.md  BIGNAMI.md  CHANGELOG.md  CHANGELOG.md.orig  CODE_OF_CONDUCT.md  COMMIT_MESSAGE_FORMAT.md  CONTRIBUTING.md  Cargo.toml  ChangeLog.md  Dockerfile  GLOSSARY.md  Gemfile  LICENSE.md  NOTES.md  README.md  Rakefile  STYLE_GUIDE.md  SUMMARY.md  TAGS  book.json  build-cfg.yaml  build.rs  cli  docker_entrypoint.sh  fizzy  metadata.yaml  rustfmt.toml  start.sh
.binstub/: bundler  cucumber  gherkin-ruby  htmldiff  kramdown  ldiff  listen  rspec  rubocop  ruby-parse  ruby-rewrite  rufo  sass  thor  tilt  y2racc
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
doc/: index.html
docker/: Dockerfile  rsyslog.conf  ssh_key.pub  supervisord.ini
docs/: index.html
features/: cli_help.feature
spec/: argparse_spec.rb  configuration_spec.rb  diff_spec.rb  exts_hash_spec.rb  git_sync_spec.rb  grammars_logic_spec.rb  grammars_type_spec.rb  hash_ext_spec.rb  instantiator_spec.rb  logic_grammar_spec.rb  meta_info_spec.rb  spec_helper.rb  sync_git_spec.rb  sync_spec.rb  template_spec.rb  tree_node_spec.rb  type_grammar_spec.rb  vars_spec.rb
src/: cli.rb  cli.rs  configuration.rb  lib.rs  main.rb  main.rs  requires.rb
task/: build.rake  clean.rake  console.rake  default.rake  doc.rake  docker.rake  lint.rake  repl.rake  spec.rake
tasks/: bin_utils.rb  cfg.rb  clean.rake  console.rake  default.rake  doc.rake  docker.rb  funcs.rb  grammars.rb  (+6 more)
(+389 files in other folders)
