[package]
name = "fizzy"
version = "3.0.0"
build = "build.rs"
readme = "README.md"
license = "Apache-2.0"
authors = ["Alessandro Molari <molari.alessandro@gmail.com>"]
description = "The hassle-free configuration manager"
homepage = "https://alem0lars.github.io/fizzy"
repository = "https://github.com/alem0lars/fizzy"
documentation = "https://alem0lars.github.io/fizzy"

[lib]
name = "fizzy"

[[bin]]
name = "fizzy"
doc = false

[dependencies]
clap = "~2"

[dev-dependencies]
skeptic = "~0.5"

[build-dependencies]
skeptic = "~0.5"
clog = "~0.9"
